<resources>
    <string name="app_name">Scratch It Ticket Validation</string>
    <string name="dev_name">Combiz Essential Solutions Corporation\n© 2018</string>

    <string name="login_txtusername">Username</string>
    <string name="login_txtpassword">Password</string>
    <string name="login_btnlogin">Login</string>

    <string name="about_error">Check phone permissions!</string>

    <string name="settings_lblserver">Server</string>
    <string name="settings_txtserver">Server URL (ex. https://licserv.\ncombizcorp.com/scratchit)</string>
    <string name="settings_lbllicense">License</string>
    <string name="settings_txtlicense">Not registered</string>
    <string name="settings_btnsave">Save settings</string>
    <string name="settings_error_invalidURL">Invalid License Server URL!</string>


    <string name="ticketlist_lblheader">Ticket</string>
    <string name="ticketlist_lblcounter">No.</string>
    <string name="ticketlist_btnremove">Remove Selected Tickets</string>

    <string name="upload_lblcounter">No.</string>
    <string name="upload_lblheader">Ticket</string>
    <string name="upload_lblstatus">Result</string>
    <string name="upload_btnupload">Ok</string>
    <string name="upload_claimed">CLAIMED</string>
    <string name="upload_lose">LOSE</string>


    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>

    <string name="validation_btnticketcount">000</string>
    <string name="validation_txtnooftickets">Number of Tickets</string>
    <string name="validation_txtticketcode">Barcode</string>


</resources>
